--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,46 @@
-version: "3"
+version: "3.9"
 services:
+  mysqldb:
+    image: mysql:8
+    container_name: mysqldb
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: organizationdb
+    ports:
+      - "3306:3306"
+    networks:
+      - organization-mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-proot"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
+
+  user:
+    build: ./user-service
+    ports:
+      - "8081:8081"
+    networks:
+      - organization-mysql
+      - site-user
+      - organization-user
+    depends_on:
+       mysqldb:
+         condition: service_healthy
+
+  site:
+    build: ./site-service
+    ports:
+      - "8082:8082"
+    networks:
+      - organization-mysql
+      - site-user
+      - organization-site
+    depends_on:
+      - mysqldb
+      - user
+
   organization:
-#    image: organization-service
     build: ./organization-service
     ports:
       - "8083:8083"
@@ -13,39 +52,6 @@ services:
       - mysqldb
       - user
       - site
-
-  site:
-#    image: site-service
-    build: ./site-service
-    ports:
-      - "8082:8082"
-    networks:
-      - organization-mysql
-      - site-user
-      - organization-site
-    depends_on:
-      - mysqldb
-      - user
- 
-  user:
-#    image: user-service
-    build: ./user-service
-    ports:
-      - "8081:8081"
-    networks:
-      - site-user
-      - organization-user
-      - organization-mysql
-    depends_on:
-      - mysqldb
-
-  mysqldb:
-    image: mysql:8
-    networks:
-      - organization-mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=organizationdb
 
 networks:
   organization-mysql:
