--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -12,6 +12,7 @@ info.app.java.version=@java.version@
 spring.datasource.url = jdbc:mysql://mysqldb:3306/organizationdb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username = root
 spring.datasource.password = root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
 ## Hibernate Properties
@@ -21,3 +22,7 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.jpa.hibernate.ddl-auto = update
 
 #spring.jpa.show-sql=true
+
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=2
